--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -49,20 +49,20 @@ jobs:
 
       - name: Install Ansible and dependencies
         run: |
-          pip3 install openshift
-          sudo apt-get install -y python3-requests-oauthlib
-          sudo apt-get install -y python-yaml
-          python -m pip install --user ansible==2.9.11
+          pip3 install openshift > /dev/null 2&>1
+          sudo apt-get install -y python3-requests-oauthlib > /dev/null 2&>1
+          sudo apt-get install -y python-yaml > /dev/null 2&>1
+          python -m pip install --user ansible==2.9.11 > /dev/null 2&>1
 
       - name: Install ansible galaxy collection for docker and k8s
         run: |
-          ansible-galaxy collection install community.docker
-          ansible-galaxy collection install community.kubernetes:==1.2.1
+          ansible-galaxy collection install community.docker > /dev/null 2&>1
+          ansible-galaxy collection install community.kubernetes:==1.2.1 > /dev/null 2&>1
 
       - name: Setup kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl > /dev/null 2&>1
 
       - name: Update kubeconfig and set context to blockchain cluster
         run: |
@@ -70,7 +70,7 @@ jobs:
 
       - name: Install Docker
         run: |
-          pip3 install docker
+          pip3 install docker > /dev/null 2&>1
 
       - name: Log into GitHub Docker Registry
         uses: docker/login-action@v1
