--- a/.github/workflows/healthcheck.yaml
+++ b/.github/workflows/healthcheck.yaml
@@ -13,10 +13,10 @@ on:
 
 env:
   cluster_name: ${{ secrets.blk_cluster_name }}
-  aws_region: ${{ secrets.aws_region }}
+  aws_region: ${{ secrets.region }}
   aws_access_key: ${{ secrets.baf_user_access_key }}
   aws_secret_key: ${{ secrets.baf_user_secret_key }}
-  aws_account: ${{ secrets.aws_account_number }}
+  aws_account: ${{ secrets.account_number }}
   github_user: ${{ secrets.ghub_user }}
   github_user_token: ${{ secrets.ghub_user_token }}
   github_user_email: ${{ secrets.ghub_user_email }}
