--- a/.github/workflows/deploy_blockchain_network.yaml
+++ b/.github/workflows/deploy_blockchain_network.yaml
@@ -63,7 +63,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ansible-automation
+        working-directory: openidl-ansible
     env:
       cluster_name: ${{ secrets.blk_cluster_name }}
       region: ${{ secrets.aws_region }}
