--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
     tools {
         terraform 'terraform'
+        git 'git'
     }
     stages {
         stage("init") {
