--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage("init") {
             steps {
                 echo "terraform init started"
-                ./aws/aws_resources/terraform init --backend-config=../tf_s3_backend/aws_resources_tfc.hcl
+                terraform init --backend-config=../tf_s3_backend/aws_resources_tfc.hcl
                 }
         }
     }
