--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
             steps {
                 echo "terraform init started"
                 cd aws/aws_resources
-                pwd
+                sh pwd
                 }
         }
     }
