--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -16,5 +16,13 @@ pipeline {
                 echo "terraform init finished"
                 }
         }
+        stage("plan") {
+            steps {
+                echo "terraform plan started"
+                sh "terraform -chdir=aws/aws_resources plan"
+                echo "terraform plan finished"
+            }
+        }
     }
 }
+        
