--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         node {
-            label 'Jenkins-Master'
+            label 'jenkins-slave'
         }
     }
     tools {
