--- a/aws/k8s_resources/resources/haproxy-app-cluster/templates/service.yaml
+++ b/aws/k8s_resources/resources/haproxy-app-cluster/templates/service.yaml
@@ -24,7 +24,7 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
     service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
-    service.beta.kubernetes.io/aws-load-balancer-type: alb
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
     service.beta.kubernetes.io/aws-load-balancer-internal: "false"
 spec:
   selector:
