--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         }
     }
     stages {
-        stage("TF-init-AWS-resources") {
+        stage("TF-init-AWS") {
             steps {
                 echo "terraform init started"
                 sh "cp aws/carrier.tfvars aws/aws_resources/carrier.auto.tfvars"
@@ -13,28 +13,21 @@ pipeline {
                 echo "terraform init finished"
                 }
         }
-        stage("TF-syntax-AWS-resources") {
-            steps {
-                echo "terraform syntax check started"
-                sh "terraform -chdir=aws/aws_resources validate -no-color -json"
-                echo "terraform syntax check finished"
-            }
-        }
-        stage("TF-plan-AWS-resources") {
+        stage("TF-plan-AWS") {
             steps {
                 echo "terraform plan started"
                 sh "terraform -chdir=aws/aws_resources plan -compact-warnings"
                 echo "terraform plan finished"
             }
         }
-        stage("TF-apply-AWS-resources") {
+        stage("TF-apply-AWS") {
             steps {
                 echo "terrform apply"
                 sh "terraform -chdir=aws/aws_resources apply --auto-approve -compact-warnings"
                 echo "terraform apply finished"
             }
         }
-        stage("TF-init-K8s-resources") {
+        stage("TF-init-K8s") {
             steps {
                 echo "terraform init started"
                 sh "cp aws/carrier.tfvars aws/k8s_resources/carrier.auto.tfvars"
@@ -42,21 +35,14 @@ pipeline {
                 echo "terraform init finished"
                 }
         }
-        stage("TF-syntax-K8s-resources") {
-            steps {
-                echo "terraform syntax check started"
-                sh "terraform -chdir=aws/k8s_resources validate -no-color -json"
-                echo "terraform syntax check finished"
-            }
-        }
-        stage("TF-plan-K8s-resources") {
+        stage("TF-plan-K8s") {
             steps {
                 echo "terraform plan started"
                 sh "terraform -chdir=aws/k8s_resources plan -compact-warnings"
                 echo "terraform plan finished"
             }
         }
-        stage("TF-apply-K8s-resources") {
+        stage("TF-apply-K8s") {
             steps {
                 echo "terrform apply"
                 sh "terraform -chdir=aws/k8s_resources apply --auto-approve -compact-warnings"
