--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -19,13 +19,19 @@ def checkout() {
     }
 }
 def buildInfra() {
-    stage('AWS-Plan-Apply') {
+    stage('AWS-Plan') {
         def ws_id = getWorkspaceId("${params.TF_AWS_WORKSPACE}")
         def (config_version, upload_url) = createConfig("${ws_id}")
         def upload_status = uploadAWSConfig("${upload_url}")
         def runid = ""
-        runid = plan("${ws_id}")
-        waitForPlan("${runid}")
+        runid = plan("${ws_id}") 
+        environment {
+            aws_wsid = ws_id 
+            aws_runid = runid 
+        } 
+    stage('AWS-Apply') {
+        waitForPlan("${env.aws_runid}")
+    
     }
     stage('K8s-Plan-Apply') {
         def ws_id = getWorkspaceId("${params.TF_K8S_WORKSPACE}")
