--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -24,7 +24,7 @@ def buildInfra() {
         def (config_version, upload_url) = createConfig("${ws_id}")
         def upload_status = uploadAWSConfig("${upload_url}")
         environment {
-            aws_wsid = ${ws_id} 
+            aws_wsid = "${ws_id}" 
             
         }
         echo "${env.aws_wsid}"
@@ -33,7 +33,7 @@ def buildInfra() {
         def runid = ""
         runid = plan("${env.aws_wsid}") 
         environment {
-            aws_runid = ${runid} 
+            aws_runid = "${runid}" 
         } 
     }
     stage('AWS-Apply') {
