--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -19,27 +19,13 @@ def checkout() {
     }
 }
 def buildInfra() {
-    stage('AWS-Init') {
+    stage('AWS-Plan-Apply') {
         def ws_id = getWorkspaceId("${params.TF_AWS_WORKSPACE}")
         def (config_version, upload_url) = createConfig("${ws_id}")
         def upload_status = uploadAWSConfig("${upload_url}")
-        environment {
-            aws_wsid = "test"
-            
-        }
-        echo "${env.aws_wsid}"
-    }
-    stage('AWS-Plan') {
-        echo "${env.aws_wsid}"
         def runid = ""
-        runid = plan("${env.aws_wsid}") 
-        environment {
-            aws_runid = "${runid}" 
-        } 
-    }
-    stage('AWS-Apply') {
-        waitForPlan("${env.aws_runid}")
-    
+        runid = plan("${ws_id}") 
+        waitForPlan("${runid}") 
     }
     stage('K8s-Plan-Apply') {
         def ws_id = getWorkspaceId("${params.TF_K8S_WORKSPACE}")
