--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -382,6 +382,26 @@ def waitForApply(runid) {
             break
         } else if (status == 'applied') {
             println("This run has finished applying")
+            def response = httpRequest(
+                customHeaders: [
+                    [ name: "Authorization", value: "Bearer " + "${env.TF_BEARER_TOKEN}" ],
+                    [ name: "Content-Type", value: "application/vnd.api+json" ]
+                ],
+                url: "https://" + "{params.TF_ADDRESS}" + "/api/v2/runs/${runid}?include=apply"
+            )
+            def data = new JsonSlurper().parseText(response.content)
+            def apply_id = data.included[0].id
+            println("Apply ID:" + apply_id)
+            def response = httpRequest(
+                customHeaders: [
+                    [ name: "Authorization", value: "Bearer " + "${env.TF_BEARER_TOKEN}" ],
+                    [ name: "Content-Type", value: "application/vnd.api+json" ]
+                ],
+                url: "https://" + "{params.TF_ADDRESS}" + "/api/v2/applies/${apply_id}"
+            )
+            def data = new JsonSlurper().parseText(response.content)
+            def apply_log_url = data.data.attributes."log-read-url"
+            println("Click the URL to review terraform apply log in detail:\n" + apply_log_url)
             break
         }
         else if (count > 3600) break
