--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -387,8 +387,8 @@ def waitForApply(runid) {
                     [ name: "Authorization", value: "Bearer " + "${env.TF_BEARER_TOKEN}" ],
                     [ name: "Content-Type", value: "application/vnd.api+json" ]
                 ],
-                url: "https://" + "{params.TF_ADDRESS}" + "/api/v2/runs/${runid}?include=apply"
-            )
+                url: "https://" + "${params.TF_ADDRESS}" + "/api/v2/runs/${runid}?include=apply"
+                )
             def apply_data = new JsonSlurper().parseText(response_id.content)
             def apply_id = apply_data.included[0].id
             println("Apply ID:" + apply_id)
@@ -397,7 +397,7 @@ def waitForApply(runid) {
                     [ name: "Authorization", value: "Bearer " + "${env.TF_BEARER_TOKEN}" ],
                     [ name: "Content-Type", value: "application/vnd.api+json" ]
                 ],
-                url: "https://" + "{params.TF_ADDRESS}" + "/api/v2/applies/${apply_id}"
+                url: "https://" + "${params.TF_ADDRESS}" + "/api/v2/applies/${apply_id}"
             )
             def apply_log = new JsonSlurper().parseText(response.content)
             def apply_log_url = apply_log.data.attributes."log-read-url"
