--- a/jenkins_jobs/Jenkinsfile
+++ b/jenkins_jobs/Jenkinsfile
@@ -399,7 +399,7 @@ def waitForApply(runid) {
                 ],
                 url: "https://" + "${params.TF_ADDRESS}" + "/api/v2/applies/${apply_id}"
             )
-            def apply_log = new JsonSlurper().parseText(response.content)
+            def apply_log = new JsonSlurper().parseText(response_log.content)
             def apply_log_url = apply_log.data.attributes."log-read-url"
             println("Click the URL to review terraform apply log in detail:\n" + apply_log_url)
             break
