--- a/ansible-automation/demo.yml
+++ b/ansible-automation/demo.yml
@@ -1,6 +1,7 @@
 ---
-#demo task
-- tasks:
+- hosts: localhost
+  gather_facts: yes
+  tasks:
   - name: check httpd status 
     service:
       name: httpd 
