--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -4,8 +4,8 @@
   tasks:
   - name: Install package dependencies
     package:
-      name: {{ item }}
-      state:  present
+      name: "{{ item }}"
+      state: present
     with_items:
       - python
       - unzip
