--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -8,7 +8,7 @@
       name: "{{ item }}"
       state: present
     with_items:
-      - python
+      - python3.6
       - unzip
 
   - name: Download the awscli bundle
