--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -61,13 +61,8 @@
     shell: export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ app_cluster_name }}
     register: app_cluster_context_set
 
-  - name: Install ansible galaxy collection for docker and k8s
-    shell: |
-      ansible-galaxy collection install community.docker
-      ansible-galaxy collection install community.kubernetes:==1.2.1
-
   - name: Create a k8s namespace
-    community.kubernetes.k8s:
+    kubernetes.core.k8s:
       name: database
       api_version: v1
       kind: Namespace
