--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -13,26 +13,9 @@
       - curl
       - python3
 
-  - name: Download the awscli bundle
-    get_url: url=https://s3.amazonaws.com/aws-cli/awscli-bundle.zip dest=/tmp/awscli-bundle.zip
-    register: aws_cli_download_bundle
-
-  - name: Unarchive the awscli installer
-    unarchive: src=/tmp/awscli-bundle.zip dest=/tmp copy=no creates=/tmp/awscli-bundle
-    when: aws_cli_download_bundle.changed
-    register: aws_cli_unarchive_installer
-
-  - name: Install awscli package
+  - name: Install aws cli
     shell: |
-      python /tmp/awscli-bundle/install -i /usr/local/aws -b /usr/bin/aws
-    args:
-      creates: /usr/bin/aws
-    when: aws_cli_unarchive_installer.changed
-
-  - name: Remove awscli installer downlaoded
-    shell: |
-      rm -rf /tmp/awscli-bundle
-      rm -rf /tmp/awscli-bundle.zip
+      sudo apt-get install awscli
 
   - name: Configure awscli credentials for IAM user
     shell: aws configure set {{ item.key }} {{ item.value }} --profile cicd-user
