--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -9,9 +9,9 @@
       state: present
     with_items:
       - unzip
-      - python
-      - curl
       - python3
+      - python3-pip
+      - curl
 
   - name: Install aws cli
     shell: |
@@ -59,11 +59,22 @@
   - name: Unarchive the helm installer
     unarchive: src=/tmp/helm-bundle.zip dest=/tmp copy=no creates=/tmp/
     register: helm_unarchive_installer
+    when: helm_download_bundle.changed
 
   - name: Intall helm
     shell: |
       sudo mv /tmp/linux-amd64/helm /usr/local/bin/helm
       sudo chmod +x /usr/local/bin/helm
+    when: helm_archive_installer.changed
+
+  - name: Install ansible and its dependencies
+    shell: |
+      pip3 install openshift
+      sudo apt-get install -y python3-requests-oauthlib python-yaml jq
+      pip install --user ansible==2.9.11
+      pip3 install docker
+      ansible-galaxy collection install community.docker
+      ansible-galaxy collection install community.kubernetes:==1.2.1
 
   - name: Create a k8s namespace
     kubernetes.core.k8s:
@@ -71,5 +82,4 @@
       api_version: v1
       kind: Namespace
       state: present
-
 
