--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -65,7 +65,7 @@
     shell: |
       sudo mv /tmp/linux-amd64/helm /usr/local/bin/helm
       sudo chmod +x /usr/local/bin/helm
-    when: helm_archive_installer.changed
+    when: helm_unarchive_installer.changed
 
   - name: Install ansible and its dependencies
     shell: |
@@ -77,7 +77,7 @@
       ansible-galaxy collection install community.kubernetes:==1.2.1
 
   - name: Create a k8s namespace
-    kubernetes.core.k8s:
+    community.kubernetes.k8s:
       name: database
       api_version: v1
       kind: Namespace
