--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -77,7 +77,7 @@
       ansible-galaxy collection install community.kubernetes:==1.2.1
 
   - name: Create a k8s namespace
-    community.kubernetes.k8s:
+    kubernetes.core.k8s:
       name: database
       api_version: v1
       kind: Namespace
