--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -12,6 +12,7 @@
       - python3
       - python3-pip
       - curl
+      -
 
   - name: Install aws cli
     shell: |
@@ -70,14 +71,14 @@
   - name: Install ansible and its dependencies
     shell: |
       pip3 install openshift
-      sudo apt-get install -y python3-requests-oauthlib python-yaml jq
+      sudo apt-get install python3-requests-oauthlib python-yaml jq ansible -y
       pip install --user ansible==2.9.11
       pip3 install docker
       ansible-galaxy collection install community.docker
       ansible-galaxy collection install community.kubernetes:==1.2.1
 
   - name: Create a k8s namespace
-    kubernetes.core.k8s:
+    community.kubernetes.k8s:
       name: database
       api_version: v1
       kind: Namespace
