--- a/awx-automation/awscli_install.yml
+++ b/awx-automation/awscli_install.yml
@@ -75,7 +75,7 @@
       ansible-galaxy collection install community.kubernetes:==1.2.1
 
   - name: Create a k8s namespace
-    kubernetes.core.k8s:
+    community.kubernetes.k8s:
       name: database
       api_version: v1
       kind: Namespace
